--- a/build.xml
+++ b/build.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="voidstats" basedir=".">
 <property name="name" value="voidstats"/>
-<property name="version" value="0.2-dev"/>
+<property name="version" value="0.1-dev"/>
 <property name="src.dir" value="src"/>
 <property name="build.dir" location="build" />
 <property name="dist.dir" value="dist"/>
 <property name="lib.dir" value="lib"/>
 <property name="docs.dir" value="javadoc"/>
-<property name="main-class" value="org.deri.voidstats.Main"/>
+<property name="main-class" value="org.semanticweb.yars.voidstats.Main"/>
 	
 <!-- Add lib folder to build path -->	
 <path id="classpath">
@@ -38,9 +38,9 @@
 </target>	
 	
 <!--Creates the deployable jar file  -->
-<target name="dist" depends="compile">
+<target name="jar" depends="compile">
 	<jar destfile="${dist.dir}/${name}-${version}.jar" basedir="${build.dir}">
-		<!-- <zipfileset src="${lib.dir}/commons-cli-1.1.jar" /> -->
+		<zipfileset src="${lib.dir}/commons-cli-1.1.jar" />
 		<zipfileset src="${lib.dir}/nxparser-1.2.3.jar" />
 		<manifest>
 			<attribute name="Main-Class" value="${main-class}" />
@@ -49,7 +49,7 @@
 </target>
 	
 <!-- Creates Javadocs -->
-<target name="docs" depends="dist" >
+<target name="docs" depends="jar" >
 	<javadoc destdir="${docs.dir}" author="true" version="true">
 	    <fileset dir="${src.dir}" />			
 		<classpath refid="classpath"/>		
